<resources>
    <string name="app_name">SredniaArytmetyczna</string>
    <string name="activ1_nameTextView">Name</string>
    <string name="activ1_nameEditText_hint">Type name</string>
    <string name="activ1_surnameTextView">Surname</string>
    <string name="activ1_surnameEditText_hint">Type surname</string>
    <string name="activ1_gradeCountTextView">Grades count</string>
    <string name="activ1_gradeCountEditText">Type grade count (5-15)</string>
    <string name="activ1_gradesButton">GRADES</string>
    <string name="toast_name_not_empty">Name can\'t be empty</string>
    <string name="toast_surname_not_empty">Surname can\'t be empty</string>
    <string name="toast_grade_count_not_empty">Grade count can\'t be empty</string>
    <string name="toast_grade_count_alert">Grade count must be between (5-15)</string>
    <string name="button_count_average">COUNT AVERAGE</string>
    <string name="exit_positive">Congratulations! You get credit!</string>
    <string name="exit_negative">I\'m sending an application for a conditional pass</string>
    <string name="activ1_exitButton_positive">Super 😉</string>
    <string name="activ1_exitButton_negative">I failed this time</string>
    <string name="activ1_averageTextView">Calculated average:</string>

    <string-array name="subjectArray">
        <item>Data Structures</item>
        <item>Comp. Organization</item>
        <item>Programming Lang.</item>
        <item>Database Systems</item>
        <item>Operating Systems</item>
        <item>Comp. Networks</item>
        <item>AI and ML</item>
        <item>HCI and UX</item>
        <item>Software Eng.</item>
        <item>Comp. Graphics</item>
        <item>Distributed Systems</item>
        <item>Mobile App Dev.</item>
        <item>Web Development</item>
        <item>Comp. Vision</item>
        <item>NLP and Text Mining</item>
    </string-array>


</resources>